--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- Add Friend Section -->
         <div>
             <input type="text" id="friend-name" placeholder="Enter friend's name">
+            <input type="number" id="friend-cadence" placeholder="Cadence in days">
             <button id="add-friend">Add Friend</button>
         </div>
 
