SHOW ALL WORKING NEED TO SHADE FRIEND CARD

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             </div>
         </div>
     </div>
+
+    <!-- Add this within the #roulette-panel div -->
+    <div id="view-toggle">
+        <label for="show-all">Show All Friends:</label>
+        <input type="checkbox" id="show-all">
+    </div>
     
     
 
