custom days and bugged weighted selection

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     <div class="cadence-box" data-cadence="7">1 Week</div>
                     <div class="cadence-box" data-cadence="14">2 Weeks</div>
                     <div class="cadence-box" data-cadence="28">4 Weeks</div>
+                    <div class="cadence-box custom-cadence">
+                        <input type="number" id="custom-cadence" placeholder="Days" min="1" />
+                    </div>
                 </div>
                 <input type="hidden" id="friend-cadence" value="7">
                 <button id="add-friend">Add Friend</button>
